Navigation small bux fix

--- a/sass/components/navigation.sass
+++ b/sass/components/navigation.sass
@@ -20,7 +20,7 @@
 	&:not(.horizontal)
 		white-space: nowrap
 		overflow: hidden
-		text-overflow: hidden
+		text-overflow: clip
 
 	&.filled
 		background-color: $fill-component-color
